--- a/src/main/resources/templates/report-center.html
+++ b/src/main/resources/templates/report-center.html
@@ -34,31 +34,35 @@
                         </thead>
                         <tbody>
                         <tr>
-                            <td><input type="text" class="para 1011_1 form-control" aria-label="钢丝长L" id="1011_1_gangsi" ></td>
-                            <td><input type="text" class="para 1011_1 form-control" aria-label="平面镜到标尺H" id="1011_1_pingmianjing" ></td>
-                            <td><input type="text" class="para 1011_1 form-control" aria-label="光杠杆前后足b" id="1011_1_guangganggan" ></td>
+                            <td><input class="para 1011_1 form-control" aria-label="钢丝长L" id="1011_1_L" type="text"></td>
+                            <td><input class="para 1011_1 form-control" aria-label="平面镜到标尺H" id="1011_1_H" type="text"></td>
+                            <td><input class="para 1011_1 form-control" aria-label="光杠杆前后足b" id="1011_1_b" type="text"></td>
                         </tr>
                         </tbody>
                     </table>
                     <table class="table table-condensed table-hover table-striped" id="table1011_1_zhijing">
                         <thead>
                         <tr>
-                            <th>直径 </th>
+                            <th>直径(mm)</th>
                             <th>1</th>
                             <th>2</th>
-                            <th>3</th>
-                            <th>4</th>
-                            <th>5</th>
                         </tr>
                         </thead>
                         <tbody>
                         <tr>
-                            <td>(mm)</td>
-                            <td><input type="text" class="para 1011_1 form-control" aria-label="直径1" id="1011_1_D1"></td>
-                            <td><input type="text" class="para 1011_1 form-control" aria-label="直径2" id="1011_1_D2"></td>
-                            <td><input type="text" class="para 1011_1 form-control" aria-label="直径3" id="1011_1_D3"></td>
-                            <td><input type="text" class="para 1011_1 form-control" aria-label="直径4" id="1011_1_D4"></td>
-                            <td><input type="text" class="para 1011_1 form-control" aria-label="直径5" id="1011_1_D5"></td>
+                            <td>上</td>
+                            <td><input class="para 1011_1 form-control" aria-label="直径1" id="1011_1_D1" type="text"></td>
+                            <td><input class="para 1011_1 form-control" aria-label="直径2" id="1011_1_D2" type="text"></td>
+                        </tr>
+                        <tr>
+                            <td>中</td>
+                            <td><input class="para 1011_1 form-control" aria-label="直径1" id="1011_1_D3" type="text"></td>
+                            <td><input class="para 1011_1 form-control" aria-label="直径2" id="1011_1_D4" type="text"></td>
+                        </tr>
+                        <tr>
+                            <td>下</td>
+                            <td><input class="para 1011_1 form-control" aria-label="直径1" id="1011_1_D5" type="text"></td>
+                            <td><input class="para 1011_1 form-control" aria-label="直径2" id="1011_1_D6" type="text"></td>
                         </tr>
                         </tbody>
                     </table>
@@ -73,49 +77,44 @@
                         </thead>
                         <tbody>
                         <tr>
-                            <td>10</td>
-                            <td><input type="text" class="para 1011_1 form-control" aria-label="加力10" id="1011_1_jia10"></td>
-                            <td><input type="text" class="para 1011_1 form-control" aria-label="减力10" id="1011_1_jian10"></td>
+                            <td><input class="para 1011_1 form-control" aria-label="10公斤" id="1011_1_m1" type="text" style="width: 60px;" value="10"></td>
+                            <td><input class="para 1011_1 form-control" aria-label="加力10" id="1011_1_jia10" type="text"></td>
+                            <td><input class="para 1011_1 form-control" aria-label="减力10" id="1011_1_jian10" type="text"></td>
                         </tr>
                         <tr>
-                            <td>12</td>
-                            <td><input type="text" class="para 1011_1 form-control" aria-label="加力12" id="1011_1_jia12"></td>
-                            <td><input type="text" class="para 1011_1 form-control" aria-label="减力12" id="1011_1_jian12"></td>
+                            <td><input class="para 1011_1 form-control" aria-label="12公斤" id="1011_1_m2" type="text" style="width: 60px;" value="12"></td>
+                            <td><input class="para 1011_1 form-control" aria-label="加力12" id="1011_1_jia12" type="text"></td>
+                            <td><input class="para 1011_1 form-control" aria-label="减力12" id="1011_1_jian12" type="text"></td>
                         </tr>
                         <tr>
-                            <td>14</td>
-                            <td><input type="text" class="para 1011_1 form-control" aria-label="加力14" id="1011_1_jia14"></td>
-                            <td><input type="text" class="para 1011_1 form-control" aria-label="减力14" id="1011_1_jian14"></td>
+                            <td><input class="para 1011_1 form-control" aria-label="14公斤" id="1011_1_m3" type="text" style="width: 60px;" value="14"></td>
+                            <td><input class="para 1011_1 form-control" aria-label="加力14" id="1011_1_jia14" type="text"></td>
+                            <td><input class="para 1011_1 form-control" aria-label="减力14" id="1011_1_jian14" type="text"></td>
                         </tr>
                         <tr>
-                            <td>16</td>
-                            <td><input type="text" class="para 1011_1 form-control" aria-label="加力16" id="1011_1_jia16"></td>
-                            <td><input type="text" class="para 1011_1 form-control" aria-label="减力16" id="1011_1_jian16"></td>
+                            <td><input class="para 1011_1 form-control" aria-label="16公斤" id="1011_1_m4" type="text" style="width: 60px;" value="16"></td>
+                            <td><input class="para 1011_1 form-control" aria-label="加力16" id="1011_1_jia16" type="text"></td>
+                            <td><input class="para 1011_1 form-control" aria-label="减力16" id="1011_1_jian16" type="text"></td>
                         </tr>
                         <tr>
-                            <td>18</td>
-                            <td><input type="text" class="para 1011_1 form-control" aria-label="加力18" id="1011_1_jia18"></td>
-                            <td><input type="text" class="para 1011_1 form-control" aria-label="减力18" id="1011_1_jian18"></td>
+                            <td><input class="para 1011_1 form-control" aria-label="18公斤" id="1011_1_m5" type="text" style="width: 60px;" value="18"></td>
+                            <td><input class="para 1011_1 form-control" aria-label="加力18" id="1011_1_jia18" type="text"></td>
+                            <td><input class="para 1011_1 form-control" aria-label="减力18" id="1011_1_jian18" type="text"></td>
                         </tr>
                         <tr>
-                            <td>20</td>
-                            <td><input type="text" class="para 1011_1 form-control" aria-label="加力20" id="1011_1_jia20"></td>
-                            <td><input type="text" class="para 1011_1 form-control" aria-label="减力20" id="1011_1_jian20"></td>
+                            <td><input class="para 1011_1 form-control" aria-label="20公斤" id="1011_1_m6" type="text" style="width: 60px;" value="20"></td>
+                            <td><input class="para 1011_1 form-control" aria-label="加力20" id="1011_1_jia20" type="text"></td>
+                            <td><input class="para 1011_1 form-control" aria-label="减力20" id="1011_1_jian20" type="text"></td>
                         </tr>
                         <tr>
-                            <td>22</td>
-                            <td><input type="text" class="para 1011_1 form-control" aria-label="加力22" id="1011_1_jia22"></td>
-                            <td><input type="text" class="para 1011_1 form-control" aria-label="减力22" id="1011_1_jian22"></td>
+                            <td><input class="para 1011_1 form-control" aria-label="22公斤" id="1011_1_m7" type="text" style="width: 60px;" value="22"></td>
+                            <td><input class="para 1011_1 form-control" aria-label="加力22" id="1011_1_jia22" type="text"></td>
+                            <td><input class="para 1011_1 form-control" aria-label="减力22" id="1011_1_jian22" type="text"></td>
                         </tr>
                         <tr>
-                            <td>24</td>
-                            <td><input type="text" class="para 1011_1 form-control" aria-label="加力24" id="1011_1_jia24"></td>
-                            <td><input type="text" class="para 1011_1 form-control" aria-label="减力24" id="1011_1_jian24"></td>
-                        </tr>
-                        <tr>
-                            <td>26</td>
-                            <td><input type="text" class="para 1011_1 form-control" aria-label="加力26" id="1011_1_jia26"></td>
-                            <td><input type="text" class="para 1011_1 form-control" aria-label="减力26" id="1011_1_jian26"></td>
+                            <td><input class="para 1011_1 form-control" aria-label="24公斤" id="1011_1_m8" type="text" style="width: 60px;" value="24"></td>
+                            <td><input class="para 1011_1 form-control" aria-label="加力24" id="1011_1_jia24" type="text"></td>
+                            <td><input class="para 1011_1 form-control" aria-label="减力24" id="1011_1_jian24" type="text"></td>
                         </tr>
                         </tbody>
                     </table>
@@ -1963,14 +1962,8 @@
                                             <input style="margin-left: 10px;" type="button" class="btn btn-default-outline" id="selectBtn" onclick="selectBtnClick()"  value="Select"></input>
                                         </div>
                                     </form>
-                                    <div style="display:none" id="back_info" th:each="rept : ${reportTemplates}">
-<<<<<<< HEAD
-
+                                    <div style="display:none" th:id="${rept.getExperiment_id()}" th:each="rept : ${reportTemplates}">
                                         <a th:index="${rept.getExperiment_id()}" th:prepareLink="${rept.getPrepare_link()}" th:db-id="${rept.getId()}"></a>
-
-=======
-                                        <a th:index="${rept.getExperiment_id()}" th:prepareLink="${rept.getPrepare_link()}" th:db-id="${rept.getId()}"></a>
->>>>>>> d68b7eb68d5b6b1b4d4e0153e7cadd2086029e61
                                     </div>
                                     <div class="alert alert-danger" role="alert" style="display:none;height:30px;padding:5px;">
                                         <span class="glyphicon glyphicon-remove-sign"></span><strong>&nbsp Error:</strong><span>&nbsp 请输入正确的实验序号!</span>
